With the new "drop down" color palette for Highlighting (LibreColors) and a keyboard shortcut applied, the keyboard shortcut for highlighting doesn't apply any color. The shortcut reverts the color of the selected text to "No Fill" if the text is highlighted, though. (This works in OpenOffice 3.3.0 with the old floating color palette.) Steps to reproduce: 1. Create a new Writer document 2. Go to Tools > Customize... > Keyboard 3. Select Format from the Category list and Highlighting from the Function list 4. Apply it to the keyboard combination of your choice (I chose Cmd+Y) 5. Click OK 6. Type anything in the Writer document 7. Select some text 8. Press the keyboard combination from 4 above Actual results: The text remains unhighlighted. Expected results: The text should be highlighted like if the toolbar button was clicked. Steps to reproduce, continued: 9. Click the Highlighting button in the toolbar and make sure the text is highlighted 10. Press the keyboard combination from 4 above Actual results: The text becomes highlighted Expected results: The text becomes highlighted --- As illustrated above, the keyboard shortcut works as expected for unhighligting, but not for highlighting.
Reproducible (?) with "LibreOffice 3.4.3 RC1 - WIN7 Home Premium (64bit) German UI [OOO340m1 (Build:301)]". I associated <ctrl+f5> to 'Format - Highlight' (or in German: 'Format - Zeichenhintergrund'). I can confirm reporter's observation that higlighted text will become text without highlighting when I press <ctrl+f5> after having selected that text. That's unexpected, I also would have expected that a click on the "Highlighting" icon would have been simulated. But that also works in the same way with LibO 3.3.3 Portable, OOo 3.1.1. OOo 3.4 seems to do nothing with 'Format -Highlighting' via shortcut. Nevertheless, IMHO this is a bug. And BTW: A shortcut for 'Format - Font Color Fill' will work as expected and simulate a click on the 'Font Color' icon. BTW: shortcut for 'Format - Font Color' (first item from list) will do nothing, shortcut for 'Format - Font Color' (seconditem from list) will bring up the 'Character Format' dialog; what ever tht might mean. Althoug consistence with other LibO applications has to be kept in mind, I see this one as a WRITER bug. @Cédric: Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
reproducible with LO 4.0.2.2 (Win7 Home, 64bit)
Reproducible with LO 4.1.5.3 on OpenSUSE 13.1 64bit
*** Bug 90639 has been marked as a duplicate of this bug. ***
Confirmed with LO 4.4.2.2 on openSUSE 13.2
Set to NEW per comment 6.
If you wish to assign a shortcut for highlighting, select 'Highlight Fill' from the function list and it will work.
To be honest, I’m not entirely satisfied with the solution as proposed by Jay in his “Comment 8” as of “2015-09-20 11:11:05 UTC”. In my opinion it would be really useful if text highlighting using the color as suggested by the “Highlight Color” button on Writer’s “Format” toolbar could be toggled using a keyboard shortcut. However, I haven’t found a way to implement this (being just a ‘casual’ user) yet.
Hi Ziggy, You can go into Tools > Customize > Keyboard and select the keyboard shortcut and then select the Format category and select Highlight Fill and you'll be able to assign the shortcut there. You can find full information here - https://wiki.documentfoundation.org/images/b/bd/GS5014-CustomizingLibreOffice.pdf There seems to be a bug in the assignment of the shortcut as it requires a user to first use the Highlight Color (.uno:BackColor) toolbar button to color with yellow before highlight fill (.uno:CharBackgroundExt) can be activated to work with a color.
as of 5.1.5.2 this is still a thing. This has been a problem for a long time, as I have also had the same issue in earlier versions. I am disappointed to see that it is still not working properly. As a teacher I have to be able to highlight texts A LOT, when evaluating student works. Having a working keyboard shortcut for this is essential and should be an elementary feature. As per the original report, the highlight color function works to UNhighligt an already highlighted text, but fails to actually highlight it in the first place. Now I know there is a highlight fill function that is supposed to be a workaround for this. But no. That's not working properly either. Highlight fill, out of the box does nothing when assigned a shortcut. As I'm writing this and tinkering with the program (going by earlier comments), I seem to be able to get it to sometimes work. If I first use the toolbar option. Then subsequently I can use the shortcut for highlight fill. But it stops working at random if I do something else in-between. Especially the highlight function, which there are two of, for some reason (one of which doesn't work at all) and the highlight fill seem to actively interfere with one another. This is clearly not a working solution. It's an un-intuitive mess that has a life of it's own. Please prioritize this issue to at least normal level. This is such a basic function that it is quite literately a deal-breaker for me and I am sure others as well.
** Please read this message in its entirety before responding ** To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year. There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present. If you have time, please do the following: Test to see if the bug is still present with the latest version of LibreOffice from https://www.libreoffice.org/download/ If the bug is present, please leave a comment that includes the information from Help - About LibreOffice. If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a comment that includes the information from Help - About LibreOffice. Please DO NOT Update the version field Reply via email (please reply directly on the bug tracker) Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case) If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3) from http://downloadarchive.documentfoundation.org/libreoffice/old/ 2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to 'inherited from OOo'; 4b. If the bug was not present in 3.3 - add 'regression' to keyword Feel free to come ask questions or to say hello in our QA chat: https://kiwiirc.com/nextclient/irc.freenode.net/#libreoffice-qa Thank you for helping us make LibreOffice even better for everyone! Warm Regards, QA Team MassPing-UntouchedBug
Changing the behavior of the current highlight command is a bad idea, as it appears to be used in existing macros to remove highlighting (e.g. Bug 81231). However adding a new command that will apply highlighting is a valid request, but it can't be done before implementing a global way to store that last highlight color (Bug 72991) and syncing it between color buttons (Bug 82438).
Libre Office 5.4.3.2 installed from the official RPMS on CentOS 7.3. I confirm Johan Brink's observation on 2016-10-14 that there are now _two_ Highlight Color options, neither of which work, and neither does Highlight Fill work. Like him, I review documents and must highlight often.
*** Bug 116287 has been marked as a duplicate of this bug. ***
Still happening on: Versão: 6.0.4.2 (x64) ID de compilação: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf Threads da CPU:4; SO:Windows 10.0; Realizador da interface: padrão; Local: pt-BR (pt_BR); Calc: CL
I must say Libre Office is really a good tool and is better as compared to same tools of other brands. Its providing good features and many shortcuts. For more reliable gadgets, tools, and support go to https://netgears.support/netgear-powerline/
Can still reproduce it in Version: 6.0.5.2 Build ID: 1:6.0.5~rc2-0ubuntu0.17.10.1~lo1
The users must be utilized all the necessary shortcut techniques of the keyboard which will be really very fruitful for them to access any platform in a proper manner. This article is providing all these tricks that all are truly very fruitful for them to bring a grip on such platforms.
The users must be utilized all the necessary shortcut techniques of the keyboard which will be really very fruitful for them to access any platform in a proper manner. This article is providing all these tricks that all are truly very fruitful for them to bring a grip on such platforms. For more details may check from https://lenovosupport.net/lenovo-laptop-repair/ that will guide them.
I was searching for the keyboard shortcut for Format-Highlighting and from this blog, I got the solution which is properly explained step by step and https://www.uaetechnician.com/asus-laptop-battery-replacement.html help too for some more information.
Still happening on Fedora 29. Version: 6.1.5.2 Build ID: 6.1.5.2-1.fc29
reproducible with LO 6.1.5.2 (Win10 Pro, 64bit)
Bug 116287 has been marked as a duplicate of this bug
Ludo is a classic game with unlimited video calling and audio chat features
<a href="https://play.google.com/store/apps/details?id=com.CRE8.LudoChat">ludo</a> Reproducible with LO 4.1.5.3 on OpenSUSE 13.1 64bit
*** Bug 128052 has been marked as a duplicate of this bug. ***
Whenever you find that routerlogin net not working and you need technical assistance, then you can visit https://routerlognnet.us/ or contact us we will be there to help you 24*7.
Looking for Kaspersky Contact, visit on: http://www.global-technical-support.co.uk/kaspersky-support
Roku is a device that is used by people for entertainment. The steps are easy to activate Roku using <a href="https://rokucomlink.live/">roku.com/link</a>. But if you face any issue and need technical assistance then contact our technical support team.
It's the most common error that every user tackles once in a life time while perform Arlo pro login. But fortunately, arlo-setup.net, will provide you the instant solutions for all Arlo setup problems. Arlo login my account Error is one of the most common and critical error in the Arlo Pro cameras. Change in the password or forget the password are the major reasons behind the login failure. Dial 1-855-881-8818, and get the instant solution to fix Arlo Pro login failure error. https://arlo-setup.net/how-to-use-motion-detection-test-for-your-arlo-device/
Very interesting, good job and thanks for sharing such a good blog. Visit:- https://www.techsteq.com/
If you face any issue or error message on your screen while [url=https://linksyssmartwifi.site/linksys-re6700-setup/]setting up Linksys RE6700[/url] then you can contact our technical support members. They will resolve the issue and make sure there is no issue in your network connection.
If you face any issue or error message on your screen while <a href="https://linksyssmartwifi.site/linksys-re6700-setup/">setting up Linksys RE6700</a> then you can contact our technical support members. They will resolve the issue and make sure there is no issue in your network connection.
*** Bug 129473 has been marked as a duplicate of this bug. ***
Great idea, friend, thank you, keep up the good work. I am very glad to see your standard. Web: https://www.therapidhelp.com/ About: https://www.therapidhelp.com/about-us/ Contact: https://www.therapidhelp.com/contact-us/
If you are planning to set up a Netgear Extender in your home, then you can access mywifiext local web page. But if you are not able to access mywifiext local then you can contact our technical support to get instant help to know the complete instructions to access mywifiext.net and mywifiext local or visit https://mywifiextxt.net/.
Setting up the Roku is comfortable and it doesn't give you much complications while the process is happening. After the setup process, a link code will be displayed on the TV that you are using. Type the link in the box that has been provided in Roku.com/link. Then choose the submit option and eventually the device will get activated without much pressure. Use the new Roku Ultra for a good experience of watching high definition content. This device has been highly rated by critics and is a value for your money. With distinct features at its bay, this is the gadget that you will ever depend upon +1-844-581-4357 for Queries or visit our site for more information https://www.my-rokucomlink.com/
The smart TV will display a code to activate the device and must be entered in the box at Roku.com/link activation. Finally, when you send the code, the device enters the activation mode. This activates the Roku stick. visit https://www.roku-comlink.com/
Get the best solutions for Linksys extender setup from global extender experts. Get all the answers regarding Linksys WiFi Range Extender Login procedure, how to setup a linksys range extender and many more. A specialized team of experts, technicians and customer support representatives is always on the mark to provide you with the best assistance for Linksys extender setup. Call Now !!!
You have a great blog here. I would like to be part of your site where I can get advice from other experienced people. https://www.therapidhelp.com/wish-customer-service/
I read the article it is a well knowledgeable post. Actually I work on https://nighthawklogin.net/. Which is the internet expanding service I think this really needs full service for the professions in the sense for their office they need internet service.
Facing issue with your WiFi extender setup via mywifiext.net? We are one of the best New extender setup support service providers who provides various kinds of Netgear_ext setup services. If you face any kind of issue related to your Netgear Extender setup then you can contact our professional technicians at 1 866-606-3055. They can resolve your all issues in a minimum amount of time.
Looking for Mywifiext.net local login and setup success? Call 1-866-606-3055 (toll-free) now to setup wifi extender. Mywifiext is an award-winning IT testing, maintenance, and troubleshooting services provider and helps to boost your existing wifi speed and range.
Driver Fixer Pro is an app to get on time information of your PC's drivers update.
Get instant help and support for your new wifi range extender setup by Mywifiext. Contact at 1 866-606-3055 for more queries...
Created attachment 169746 [details] confusing_similarity
the bug is still present, Keyboard shortcut does not work. also, I have attached a file "confusing_similarity" where two entries bear the same name which can be confusing. I hope the entries get different names. Version: 7.1.0.3 / LibreOffice Community Build ID: 10(Build:3) CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: kf5 Locale: en-US (en_US.UTF-8); UI: en-US Calc: threaded
Created attachment 169752 [details] different command names for highlight color (In reply to Safeer Pasha from comment #51) > I hope the entries get different names. Should be in 7.2. See bug 134432
I think you should take help from technical experts.
When it comes to corrugated boxes, quality is paramount. Look no further than Avon Containners Pvt Ltd. Their commitment to excellence shines through in every box produced. With state-of-the-art facilities and stringent quality control measures, they ensure that each box meets the highest standards.
Are there any plans to rectify this bug in an upcoming release? I note that this bug was reported over 13 years ago now and it's marked as "new" and as yet hasn't been assigned to anyone. Some forum posts online have alluded to the fact that one can use macros or other "hacks" to get around this issue, but if at all possible it would be nice to have it built in by default! I use the toggleable ctrl+alt+H highlight command a lot in MS Word and would love to have the same thing in Libreoffice!
I’m using LibreOffice 24.2.2.2 and this still seems to be an issues. There are two entries for “Character Highlighting Color” in Tools > Customize menu but neither of them applies the current highlighting color to the selected text. Is this too difficult to fix or just not considered important?