tdf#34804 swdr: enable keyboard shortcut for CharColor and CharBackColor

A followup patch that adds keyboard shortcut support
for the draw objects (textbox, shapes, comments) in Writer.

Change-Id: I69dea0feb75c77fec615a3e478d4bb90db4ca84f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174805
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>